# plover_syllabic_chording

./: LICENSE  MANIFEST.in  README.md  setup.cfg
plover_syllabic_chording/: __init__.py  base_dict.py  dictionary.py  extension.py  json_dict.py  meta.py  strokes.py  system.py
plover_syllabic_chording/assets/: syc_commands.jsyc  syc_commands.sy_json  syc_dutch_basic.jsyc  syc_dutch_pro.jsyc  syc_english_basic.jsyc  syc_english_basic.syc  syc_english_pro.jsyc  syc_symbols.jsyc  syc_symbols.sy_json
plover_velotype/: dictionary.py  extension.py  meta.py  strokes.py  system.py
plover_velotype/assets/: velo_base.json  velo_commands.json  velo_english_basic.json  velo_final_consonants.json  velo_holding.json  velo_initial_consonants.json  velo_main.json  velo_simple.json  velo_special.json  velo_vowels.json
