[metadata]
name = plover_velotype
version = 0.0.1
description = Velotype support for Plover
long_description = file: README.rst
author = AlexandraAlter
author_email = alexandra.alter@protonmail.com
license = The Unlicense (Unlicense)
url = https://github.com/morinted/plover_palantype
classifiers =
  Development Status :: 1 - Planning
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
  License :: OSI Approved :: The Unlicense (Unlicense)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
keywords = plover plover_plugin
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Changelog = https://github.com/AlexandraAlter/plover_velotype/blob/master/NEWS.md
    Source Code = https://github.com/AlexandraAlter/plover_velotype
    Issue Tracker = https://github.com/AlexandraAlter/plover_velotype/issues

[options]
python_requires = >=3.8
zip_safe = True
install_requires =
	plover>=4.0.0.dev1
packages =
	plover_velotype

[options.entry_points]
plover.system =
  Velotype = plover_velotype.system
