[metadata]
name = plover_syllabic_chording
version = 0.3.1
description = Syllabic Chording support for Plover
long_description = file: README.md
long_description_content_type = text/markdown
author = AlexandraAlter
author_email = alexandra.alter@protonmail.com
license = The Unlicense (Unlicense)
url = https://github.com/AlexandraAlter/plover_syllabic_chording
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Plugins
  Intended Audience :: End Users/Desktop
  License :: OSI Approved :: The Unlicense (Unlicense)
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
keywords = plover plover_plugin
project_urls =
  Changelog = https://github.com/AlexandraAlter/plover_syllabic_chording/blob/master/NEWS.md
  Source Code = https://github.com/AlexandraAlter/plover_syllabic_chording
  Issue Tracker = https://github.com/AlexandraAlter/plover_syllabic_chording/issues

[options]
include_package_data = True
python_requires = >=3.8
zip_safe = True
install_requires =
  plover>=4.0.0.dev1
  bitstring>=3.1.7
packages =
  plover_syllabic_chording

[options.entry_points]
plover.dictionary =
  jsyc = plover_syllabic_chording.json_dict:JsonDictionary
plover.system =
  Syllabic Chording = plover_syllabic_chording.system
plover.extension =
  Syllabic Chording = plover_syllabic_chording.extension:SyllabicExtension
plover.meta =
  syc_caps = plover_syllabic_chording.meta:syllabic_caps

[yapf]
based_on_style = pep8
column_limit = 110
indent_width = 2
